--- a/index.html
+++ b/index.html
@@ -49,13 +49,10 @@
                             <a class="nav-link" href="#hardware" style="color:#a0a0a0"><Strong>Hardware</Strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#software" style="color:#a0a0a0"><Strong>Software</Strong></a>
+                            <a class="nav-link" href="#ecosystem" style="color:#a0a0a0"><Strong>Ecosystem</Strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#software" style="color:#a0a0a0"><Strong>Ecosystem</Strong></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#documentation" style="color:#a0a0a0"><Strong>Documentation</Strong></a>
+                            <a class="nav-link" href="https://kawungnet.github.io/docs" style="color:#a0a0a0"><Strong>Documentation</Strong></a>
                         </li>
 
                     </ul>
@@ -90,7 +87,7 @@
                                                 <div class="row" style="padding-bottom:30px; padding-top:30px; text-align:left">
                                                     <div class="col" style="text-align:left">
                                                         <a class="btn btn-danger prime-btn" href="#product" role="button">Get Started</a>
-                                                        <a class="btn btn-danger secondary-btn" href="#documentation" role="button" style="margin-left:20px;">Documentation</a>
+                                                        <a class="btn btn-danger secondary-btn" href="https://kawungnet.github.io/docs" role="button" style="margin-left:20px;">Documentation</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -137,6 +134,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left;padding-left:20px; padding-right:20px">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
@@ -155,6 +153,7 @@
                                     </div>
                                 </div>
                             </div>
+                            -->
 
                             <!--
                             <div class="col">
@@ -271,7 +270,6 @@
                     <div class="col-md-2">
                         <p style="color:#ffffff"><strong>Product</strong></p>
                         <p>Kawung Node</p>
-                        <p>Kawung Gateway</p>
                     </div>
                     <div class="col-md-2">
                         <p style="color:#ffffff"><strong>Ecosystem</strong></p>
