--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <br>
                                         <div class="row">
                                             <div class="col">
-                                                <a class="btn btn-danger secondary-btn" href="#kawung_node" role="button">Product</a>
+                                                <a class="btn btn-danger secondary-btn" href="./products/kwg-915.html" role="button">Product</a>
                                             </div>
                                             <div class="col" align="right">
                                                 <box-icon type='logo' name='c-plus-plus'></box-icon>
