--- a/products/kwg-915.html
+++ b/products/kwg-915.html
@@ -6,7 +6,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <title>Kawung Network</title>
-        <link rel="icon" href="./assets/img/logo-2.png">
+        <link rel="icon" href="../assets/img/logo-2.png">
         <meta content="KWG-915 product. LoRa Wireless Mesh module by Kawung Network" name="description">
         <meta content="kawung, network, iot, security, lora, arduino, raspberry" name="keywords">
 
@@ -69,20 +69,21 @@
                         <div class="card no-border">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-lg-6" style="text-align:center">
+                                    <div class="col-lg-6" style="text-align:center; padding-bottom:20px;">
                                         <img src="../assets/img/node_hero_2.png" style="height:400px; width:100%; object-fit:contain; text-align:center">
                                     </div>
                                     <div class="col-lg-6">
                                     <p style="font-size:12px">SKU : KWG-915</p>
-                                    <h3><b>Kawung Node</b></h3>
+                                    <h3><b>Kawung Node 915 MHz</b></h3>
                                     <p style="font-size:20px"><b>Rp275.000,-</b></p>
                                     <br>
                                     <p><b>Description : </b></p>
                                     <p style="font-size:14px">
                                     LoRa Wireless Mesh Module. Developed by Kawung Network.
-                                    <br>
+                                    <br><br>
                                     Modulation : LoRa<br>
                                     Frequency : 915 MHz<br>
+                                    Bandwidth : 125 kHz, 250 kHz and 500 kHz<br>
                                     LoRa Module : RFM95W / SX1276<br>
                                     Operating Voltage : 5V<br>
                                     Antenna Connection : uFL<br>
@@ -90,8 +91,8 @@
                                     Communication : UART<br>
                                     </p>
 
-                                    <a class="btn btn-success prime-btn" href="#product" role="button"><i class='bx bx-cart' ></i> Buy</a>
-                                    <a class="btn btn-info secondary-btn" href="https://kawungnet.github.io/docs#section-3" role="button" style="margin-left:20px;">Documentation</a>
+                                    <a class="btn btn-success" href="#product" role="button"><i class='bx bx-cart' ></i> Buy  Now</a>
+                                    <a class="btn btn-outline-secondary" href="https://kawungnet.github.io/docs#section-2" role="button" style="margin-left:20px;" target="_blank">Documentation</a>
 
                                     </div>
                                 </div>
@@ -109,11 +110,10 @@
             <div class="container" style="align-center">
                 <div class="row" style="text-align:left;">
                     <div class="col-md-6">
-                        <img src="./assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
+                        <img src="../assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
                         <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an public LoRa mesh network which provide secure connection and ease of use.
                         <br>
-                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network @2022</Strong>
-                        Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
+                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network @20233</Strong></p>
                     </div>
                     <div class="col-md-2">
                         <p style="color:#ffffff"><Strong>About</Strong></p>
