--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6" style="text-align:center">
-                                        <img src="./assets/img/node_hero_2.png" style="max-height:300px;  width:auto; object-fit:contain; text-align:center">
+                                        <img src="./assets/img/node-2.png" style="max-height:300px;  width:auto; object-fit:contain; text-align:center">
                                     </div>
                                 </div>
                             </div>
@@ -118,10 +118,10 @@
                             
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left; padding-left:20px; padding-right:20px">
-                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
+                                    <img src="./assets/img/node-1.png" style="height:200px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
                                         <p class="card-title" style="font-size:16px"><Strong>Kawung Node</Strong></p>
-                                        <p style="font-size:12px">Node module to send sensor's data and message repeater. Implemented in Arduino.</p>
+                                        <p style="font-size:12px">LoRa Wireless Mesh Module. Developed by Kawung Network Technology.</p>
                                         <br>
                                         <div class="row">
                                             <div class="col">
@@ -258,9 +258,10 @@
                 <div class="row" style="text-align:left;">
                     <div class="col-md-6">
                         <img src="./assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
-                        <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an public LoRa mesh network which provide secure connection and ease of use.
+                        <p class="text-white" style="font-size:12px; max-width:400px">
+                        Kawung Network Technology is an research laboratory to develop technological innovations based in Indonesia. 
                         <br>
-                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network @2023</Strong>
+                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network Technology @2023</Strong>
                         Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
                     </div>
                     <div class="col-md-2">
