--- a/products/kwg-915.html
+++ b/products/kwg-915.html
@@ -28,7 +28,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-md navbar-light p-1 primebackground shadow-sm p-3 mb-5 bg-body rounded">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#home" >
+                <a class="navbar-brand" href="../index.html" >
                     <div class="row">
                         <div class="col" style="text-align:center">
                             <img src="../assets/img/logo.png" alt="" width="auto" height="40" class="d-inline-block align-text-top">
@@ -69,18 +69,25 @@
                         <div class="card no-border">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-lg-6" style="text-align:center; padding-bottom:20px;">
-                                        <img src="../assets/img/node_hero_2.png" style="height:400px; width:100%; object-fit:contain; text-align:center">
+                                    <div class="col-lg-5" style="text-align:center; padding-bottom:20px; margin-right:60px">
+                                        <img src="./img/kwg-915-1.png" style="height:400px; width:100%; object-fit:cover; text-align:center">
                                     </div>
                                     <div class="col-lg-6">
                                     <p style="font-size:12px">SKU : KWG-915</p>
                                     <h3><b>Kawung Node 915 MHz</b></h3>
-                                    <p style="font-size:20px"><b>Rp275.000,-</b></p>
+                                    <p style="font-size:20px"><b>Rp250.000,-</b></p>
                                     <br>
                                     <p><b>Description : </b></p>
                                     <p style="font-size:14px">
-                                    LoRa Wireless Mesh Module. Developed by Kawung Network.
-                                    <br><br>
+                                    LoRa Wireless Mesh Module. Developed by Kawung Network Technology.
+                                    <br>
+                                    </p>
+
+                                    <p>
+                                    <b>Technical Spesification : </b>
+                                    </p>
+
+                                    <p style="font-size:14px">
                                     Modulation : LoRa<br>
                                     Frequency : 915 MHz<br>
                                     Bandwidth : 125 kHz, 250 kHz and 500 kHz<br>
@@ -88,11 +95,12 @@
                                     Operating Voltage : 5V<br>
                                     Antenna Connection : uFL<br>
                                     Microcontroller : ATMega328P<br>
-                                    Communication : UART<br>
+                                    Command Control : UART<br>
+                                    Dimension : 16.26 mm X 39.62 mm<br>
                                     </p>
 
-                                    <a class="btn btn-success" href="#product" role="button"><i class='bx bx-cart' ></i> Buy  Now</a>
-                                    <a class="btn btn-outline-secondary" href="https://kawungnet.github.io/docs#section-2" role="button" style="margin-left:20px;" target="_blank">Documentation</a>
+                                    <a class="btn btn-success" href="#product" role="button" style="margin-right:20px; margin-bottom:20px"><i class='bx bx-cart' ></i> Buy  Now</a>
+                                    <a class="btn btn-outline-secondary" href="https://kawungnet.github.io/docs#section-2" role="button" style="margin-bottom:20px" target="_blank">Documentation</a>
 
                                     </div>
                                 </div>
@@ -113,7 +121,7 @@
                         <img src="../assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
                         <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an public LoRa mesh network which provide secure connection and ease of use.
                         <br>
-                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network @20233</Strong></p>
+                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network Technology @2023</Strong></p>
                     </div>
                     <div class="col-md-2">
                         <p style="color:#ffffff"><Strong>About</Strong></p>
