--- a/products/kwg-915.html
+++ b/products/kwg-915.html
@@ -119,7 +119,8 @@
                 <div class="row" style="text-align:left;">
                     <div class="col-md-6">
                         <img src="../assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
-                        <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an public LoRa mesh network which provide secure connection and ease of use.
+                        <p class="text-white" style="font-size:12px; max-width:400px">
+                        Kawung Network Technology is an research laboratory to develop technological innovations based in Indonesia. 
                         <br>
                         <p class="text-white" style="font-size:10px"><Strong>Kawung Network Technology @2023</Strong></p>
                     </div>
