--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="col-md-6">
                         <img src="./assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
                         <p class="text-white" style="font-size:12px; max-width:400px">
-                        Kawung Network Technology is an research laboratory to develop technological innovations based in Indonesia. 
+                        Kawung Network Technology is a research laboratory to develop technological innovations based in Indonesia. 
                         <br>
                         <p class="text-white" style="font-size:10px"><Strong>Kawung Network Technology @2023</Strong>
                         Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
