--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                                         </h1>
                                                     </div>
                                                     <h4 style="padding-top:30px; text-align:left">
-                                                        Kawung network provide public LoRa mesh network with secure connection
+                                                        Kawung network provides public LoRa mesh network with secure connection
                                                         and ease of use.
                                                     </h4>
                                                 </div>
@@ -189,8 +189,8 @@
                                     <h3><b>A robust network platform for covering high density area</b></h3>
                                     <br>
                                     <p>
-                                        Long range (LoRa) is an wireless RF technology which has an ability for sending amount of data in long communication range. 
-                                        Kawung network have enhanced LoRa ability to keep going well in high density area by using mesh network topology. 
+                                        Long range (LoRa) is a wireless RF technology which has an ability for sending amount of data in long communication range. 
+                                        Kawung network enhance LoRa ability to keep going well in high density area by using mesh network topology. 
                                     </p>
                                     </div>
                                     <div class="col-lg-7" style="text-align:center">
@@ -259,7 +259,8 @@
                     <div class="col-md-6">
                         <img src="./assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
                         <p class="text-white" style="font-size:12px; max-width:400px">
-                        Kawung Network Technology is a research laboratory to develop technological innovations based in Indonesia. 
+                            Kawung Network Technology aims to provide a secure LoRa public mesh network via Kawung Protocol. 
+                            We encourage communities to collaborate with each other to build their IoT projects on a larger scale by supporting each others.
                         <br>
                         <p class="text-white" style="font-size:10px"><Strong>Kawung Network Technology @2023</Strong>
                         Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
