--- a/products/kwg-915.html
+++ b/products/kwg-915.html
@@ -120,7 +120,8 @@
                     <div class="col-md-6">
                         <img src="../assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
                         <p class="text-white" style="font-size:12px; max-width:400px">
-                        Kawung Network Technology is a research laboratory to develop technological innovations based in Indonesia. 
+                            Kawung Network Technology aims to provide a secure LoRa public mesh network via Kawung Protocol. 
+                            We encourage communities to collaborate with each other to build their IoT projects on a larger scale by supporting each others.
                         <br>
                         <p class="text-white" style="font-size:10px"><Strong>Kawung Network Technology @2023</Strong></p>
                     </div>
